fix: space alignment in next-step card

--- a/blocks/next-step/next-step.css
+++ b/blocks/next-step/next-step.css
@@ -7,7 +7,7 @@
 .next-step-wrapper .next-step ul{
   display: grid;
   justify-content: center;
-  grid-template-rows: repeat(2, 1fr);
+  /* grid-template-rows: repeat(2, 1fr); */
   grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
   padding-top: 2rem;
